--- a/week1/portfolio/style.css
+++ b/week1/portfolio/style.css
@@ -8,6 +8,7 @@
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #1E90FF;
     padding: 10px;
     width: 100%;
@@ -54,7 +55,8 @@ h2 {
 }
 
 footer {
-    background-color: lightgoldenrodyellow;
+    background-color: black;
+    text-align: center;
 }
 
 body {
@@ -64,3 +66,4 @@ body {
     font-family: 'Poppins', sans-serif;
     color: black;
 }
+
