--- a/week1/portfolio/style.css
+++ b/week1/portfolio/style.css
@@ -10,7 +10,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: lightskyblue;
-    padding: 25px;
+    padding: 25px 0;
     width: 100%;
     color: white;
     height: 80px;
@@ -51,15 +51,18 @@ section {
 }
 
 h2 {
-    font-size: 2opx;
+    font-size: 20px;
     color: #1E90FF;
 
 }
 
 footer p {
-    background-color: black;
+    background: #2e2e2e;
     color: white;
-    height: 5vh;
+    padding: 15px 0;
+    text-align: center;
+    font-size: 14px;
+    margin-top: 40px;
 }
 
 footer a {
@@ -73,3 +76,6 @@ body {
     color: black;
 }
 
+header nav {
+    justify-content: center;
+}
