--- a/week3/fortune-teller/style.css
+++ b/week3/fortune-teller/style.css
@@ -17,4 +17,43 @@ body {
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     max-width: 400px;
+    width: 100%;
+}
+h1 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    color: #ecf0f1;
+
+}
+button {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    font-size: 1.2em;
+    border-radius: 50px; /*Made it number for a nicer feel */
+    cursor: pointer;
+    transition: all 0.2s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+button:hover {
+    background-color: #c0392b;
+    transform: translate(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+
+}
+button:active {
+    transform: translateY(0);
+}
+#answer {
+    margin-top: 30px;
+    font-size: 1.5em;
+    font-weight: bold;
+    min-height: 60px;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
