--- a/week1/portfolio/style.css
+++ b/week1/portfolio/style.css
@@ -16,6 +16,7 @@ header {
     height: 80px;
     text-transform: uppercase;
     letter-spacing: 1px;
+    display: flex;
 }
 
 h1 {
@@ -74,4 +75,26 @@ body {
      background: white;
     font-family: 'Poppins', sans-serif;
     color: black;
+}
+
+h3 {
+    width: 80vh;
+    text-align: center;
+    color: black;
+    background:linear-gradient(to right, rgb(135, 155, 235),lightyellow);
+}
+
+nav ul{
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+
+}
+
+nav ul li a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #2e2e2e;
 }
